<resources>
    <string name="app_name">Naughty Notes</string>

    <string name="splash_screen_too_many_incorrect_attempts">Too many incorrect attempts. Please try again in %1$s.</string>

    <string name="practice_type_anal">Anal</string>
    <string name="practice_type_oral">Oral</string>
    <string name="practice_type_vaginal">Vaginal</string>
    <string name="practice_type_masturbation">Masturbation</string>
    <string name="practice_type_tribadism">Tribadism</string>
    <string name="practice_type_bdsm">BDSM</string>
    <string name="practice_type_threesome">Threesome</string>
    <string name="practice_type_unknown">Not selected</string>

    <string name="note_form_type_create">Create a Note</string>
    <string name="note_form_type_edit">Edit Note</string>

    <string name="practice_type_description_anal">Tried something naughty back there 😈</string>
    <string name="practice_type_description_oral">Left nothing to say… just oral fun 😋</string>
    <string name="practice_type_description_vaginal">Classic connection, always a thrill 💕</string>
    <string name="practice_type_description_masturbation">Solo time well spent 😌</string>
    <string name="practice_type_description_tribadism">Close and intimate — just how we like it 💞</string>
    <string name="practice_type_description_bdsm">Something very special and fun 💞</string>
    <string name="practice_type_description_threesome">A naughty co-op game 😏</string>
    <string name="practice_type_description_unknown">There is nothing to say yet 😏</string>

    <string name="practice_location_bedroom">Bedroom</string>
    <string name="practice_location_living_room">Living room</string>
    <string name="practice_location_shower">Bathtub</string>
    <string name="practice_location_kitchen">Kitchen</string>
    <string name="practice_location_floor">Floor</string>
    <string name="practice_location_car">Car</string>
    <string name="practice_location_hotel">Hotel</string>
    <string name="practice_location_public_restroom">Public restroom</string>
    <string name="practice_location_changing_room">Changing room</string>
    <string name="practice_location_balcony">Balcony</string>
    <string name="practice_location_beach">Beach</string>
    <string name="practice_location_forest">Forest</string>
    <string name="practice_location_tent">Tent</string>
    <string name="practice_location_workspace">Office</string>
    <string name="practice_location_lift">Elevator</string>
    <string name="practice_location_sauna">Sauna</string>
    <string name="practice_location_jacuzzi">Jacuzzi</string>
    <string name="practice_location_rooftop">Rooftop</string>
    <string name="practice_location_airplane">Airplane</string>
    <string name="practice_location_train">Train</string>
    <string name="practice_location_other">Other</string>
    <string name="practice_location_unknown">Not selected</string>

    <string name="note_form_screen_pain_rate_min_label">comfortable</string>
    <string name="note_form_screen_pain_rate_max_label">uncomfortable</string>
    <string name="note_form_screen_pleasure_rate_min_label">Bad!</string>
    <string name="note_form_screen_pleasure_rate_max_label">Super!</string>
    <string name="note_form_screen_practice_type_dropdown_label">Type of practice</string>
    <string name="note_form_screen_practice_location_dropdown_label">Location</string>
    <string name="note_form_screen_rate_bar_pleasure_label">How was your experience?</string>
    <string name="note_form_screen_note_text_field_label">Note (optional)</string>
    <string name="note_form_screen_subtitle">for %1$s</string>
    <string name="note_form_screen_protection_label">Protection</string>
    <string name="note_form_screen_your_orgasm_label">Your orgasm</string>
    <string name="note_form_screen_partner_orgasm_label">Partner(s) orgasm</string>
    <string name="note_form_screen_button_save">Save</string>

    <string name="note_form_screen_experience_very_bad">Totally off</string>
    <string name="note_form_screen_experience_empty">Nothing selected</string>
    <string name="note_form_screen_experience_bad">Didn\’t feel right</string>
    <string name="note_form_screen_experience_below_average">So-so</string>
    <string name="note_form_screen_experience_ok">Quite nice</string>
    <string name="note_form_screen_experience_good">Loved it</string>
    <string name="note_form_screen_experience_amazing">Absolutely incredible</string>

    <string name="home_screen_title">Journal</string>
    <string name="home_screen_subtitle">Psst! Want to add a naughty note? Just click on a date 😉</string>
    <string name="home_screen_empty_content_label">Don\'t have a note recorded?</string>
    <string name="home_screen_empty_content_label_2">There is no notes for selected period.</string>
    <string name="home_screen_empty_content_button_create_note">Create a note</string>
    <string name="home_screen_button_today">Today</string>
    <string name="home_screen_banner_total_notes_of_month">Total notes this month</string>
    <string name="home_screen_banner_days_since_last_note">Days since last note</string>
    <string name="home_screen_banner_settings">Settings</string>
    <string name="home_screen_subtitle_recent_activity">Recent Activity</string>
    <string name="home_screen_note_card_subtitle_date">Created %1$s</string>
    <string name="home_screen_recent_activity_multiple_activities">Multiple activities</string>

    <string name="all_notes_screen_title">All notes</string>
    <string name="all_notes_screen_subtitle">for %1$s</string>
    <string name="all_notes_screen_menu_edit">Edit</string>
    <string name="all_notes_screen_menu_delete">Delete</string>
    <string name="all_notes_screen_button_add_note">Add another note</string>
    <string name="all_notes_screen_icon_add">Add</string>
    <string name="all_notes_screen_icon_no_notes">no notes</string>
    <string name="all_notes_screen_empty">There is no notes for selected day</string>
    <string name="all_notes_screen_snackbar_note_deleted">Note deleted</string>
    <string name="all_notes_screen_snackbar_undo">Undo</string>

    <string name="settings_screen_title">Settings</string>
    <string name="settings_screen_appearance_title">Appearance</string>
    <string name="settings_screen_settings_pin">PIN code</string>
    <string name="settings_screen_settings_security">Security</string>
    <string name="settings_screen_settings_dark_mode">Dark mode</string>
    <string name="settings_screen_settings_stats">Statistics</string>
    <string name="settings_screen_pincode_title">Set a new PIN code</string>
    <string name="settings_screen_pincode_change_PIN">Change PIN</string>

    <string name="pin_code_screen_title">Enter your PIN</string>
    <string name="pin_code_screen_subtitle">Use your personal PIN to securely unlock the application and continue where you left off</string>
    <string name="pin_code_screen_button_save">Save</string>
    <string name="pin_code_screen_save_success">PIN was successfully saved</string>

    <string name="pin_code_verification_screen_button_log_in">Log in</string>
    <string name="pin_code_verification_screen_error_first_attempt">PIN doesn’t match. 2 attempts remaining.</string>
    <string name="pin_code_verification_screen_error_second_attempt">PIN doesn’t match. Last attempt left.</string>
    <string name="pin_code_verification_screen_error_last_attempt">Your account is locked for 10 minutes\ndue to multiple incorrect attempts.</string>

    <string name="change_existing_pin_code_screen_title">Update your PIN</string>
    <string name="change_existing_pin_code_screen_subtitle_1">Let’s start with your current PIN</string>
    <string name="change_existing_pin_code_screen_subtitle_2">Now pick a new PIN</string>
    <string name="change_existing_pin_code_screen_subtitle_3">One more time, just to be sure</string>
    <string name="change_existing_pin_code_screen_button_continue">Continue</string>
    <string name="change_existing_pin_code_screen_button_save">Save</string>
    <string name="change_existing_pin_code_screen_save_success">PIN was successfully changed</string>

    <string name="change_existing_pin_code_screen_error_wrong_pin">Wrong PIN code</string>
    <string name="change_existing_pin_code_screen_error_pins_not_match">PINs don\'t match</string>
    <string name="change_existing_pin_code_screen_error_unknown">Something\'s happened, please try again</string>

    <string name="statistic_screen_title">Statistics</string>
    <string name="statistic_screen_subtitle">View statistics by:</string>
    <string name="statistic_screen_chip_activity">type of practice</string>
    <string name="statistic_screen_chip_place">location</string>
    <string name="statistic_screen_selector_time_for">For:</string>
    <string name="statistic_screen_selector_time_current_month">Current month</string>
    <string name="statistic_screen_selector_time_previous_month">Previous month</string>
    <string name="statistic_screen_selector_time_this_year">This year</string>
    <string name="statistic_screen_selector_time_all">All the time</string>
    <string name="statistic_screen_legend_other">Other</string>
    <string name="statistic_screen_legend_label">%1$s (%2$s%%)</string>
    <string name="statistic_screen_card_average_rate">Average rate</string>
    <string name="statistic_screen_card_most_active_month">Most active month</string>
    <string name="statistic_screen_card_most_popular_activity">Most popular activity</string>
    <string name="statistic_screen_card_most_popular_location">Most popular location</string>

    <string name="error_screen_message_network">There is a problem on server side.\nPlease try later</string>
    <string name="error_screen_message_database">Something\'s happened with data.\nPlease try later</string>
    <string name="error_screen_message_common">Ups, looks like we crashed something</string>
    <string name="error_screen_message_unknown">Something went wrong</string>

    <string name="profile_screen_title">Profile</string>

    <string name="grid_state_collapsed_button_text">Show more</string>
    <string name="grid_state_expanded_button_text">Show less</string>
</resources>