...
        HorizontalDividerWithText(
            modifier = Modifier.padding(vertical = Padding.small),
            text = stringResource(R.string.note_form_screen_rate_bar_pleasure_label),
        )
        NoteFormSlider(
            modifier = Modifier
                .testTag("experience_slider"),
            rate = state.experienceRate,
        ) {
            onIntentChanged(NoteFormIntent.SetExperienceRate(it))
        }

        HorizontalDividerWithText(
...
