appId: com.antsfamily.naughtynotes
---
- launchApp:
    clearState: true
- tapOn: "1"
- tapOn: "Oral"
- tapOn: "Show more"
- tapOn: "Kitchen"
#- hideKeyboard
- waitForAnimationToEnd
- scrollUntilVisible:
    element:
      id: "experience_slider"
#- extendedWaitUntil:
#    visible:
#      id: "experience_slider"
#    timeout: 5000
- tapOn:
    id: "experience_slider"
- tapOn: "Save"
- waitForAnimationToEnd
- extendedWaitUntil:
      visible: "Journal"
      timeout: 5000
